@@ -143,7 +143,8 @@ struct monst *mtmp;
 
 	return (boolean)(sobj_at(SCR_SCARE_MONSTER, x, y)
 #ifdef ELBERETH
-			 || sengr_at("Elbereth", x, y)
+			 || (!flags.elberethignore
+			     && sengr_at("Elbereth", x, y))
 #endif
 			 || (is_vampire(mtmp->data)
 			     && IS_ALTAR(levl[x][y].typ)));
